# snu_sdx_controller

./: README.md
dyros_robot_controller/: CMakeLists.txt  package.xml
dyros_robot_controller/drc/: __init__.py  caster_wheel.py  differential_wheel.py  mecanum_wheel.py
dyros_robot_controller/include/dyros_robot_controller/: CasterWheel.h  DifferentialWheel.h  MecanumWheel.h
dyros_robot_controller/src/: CasterWheel.cpp  DifferentialWheel.cpp  MecanumWheel.cpp  bindings.cpp
mujoco_ros/: package.xml  setup.py
mujoco_ros/config/: teleop_twist_joy.yaml
mujoco_ros/launch/: manipulator_sim_launch.py  mobile_w_joy_launch.py
mujoco_ros/mujoco_ros/: manipulator_sim.py  mobile_sim.py
mujoco_ros/robots/: fr3.xml  husky.xml  pcv.xml  summit_xls.xml
mujoco_ros/robots/assets/: assets.xml  basic_scene.xml
mujoco_ros/robots/fr3/: actuator.xml  assets.xml  fr3.urdf.xml
mujoco_ros/robots/husky/: actuator.xml  assets.xml  husky.urdf.xml
mujoco_ros/robots/pcv/: actuator.xml  assets.xml  pcv.urdf.xml
mujoco_ros/robots/summit_xls/: assets.xml  summit_xls.urdf.xml
